fix the alignment for the tab and mobile view

--- a/src/Styles/Scss/_main.scss
+++ b/src/Styles/Scss/_main.scss
@@ -23,25 +23,26 @@ html {
 #root{
     position: relative;
 }
-@media only screen and (max-width: 1500px) {
-    html {
-        // font-size: 11px;
-    }
-}
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width:320px) and (max-width: 425px) {
     html {
         font-size: 10px;
     }
 }
+
+@media only screen and (min-width:426px)  and (max-width: 768px) {
+    html {
+        font-size: 7px;
+    }
+}
 @media only screen and (min-width:769px) and (max-width: 1024px) {
     html {
-        font-size: 9.5px;
+        font-size: 8.5px;
     }
 }
 @media only screen and (min-width:1025px) and (max-width: 1440px) {
     html {
-        font-size: 13px;
+        font-size: 11px;
     }
 }
 @media only screen and (min-width:1441px) and (max-width: 1920px) {
@@ -52,7 +53,7 @@ html {
 
 @media only screen and (min-width:1921px) and (max-width: 3840px) {
     html {
-        font-size: 22px;
+        font-size: 21px;
     }
 }
 div.dot-pulse {
